# judge-reliability-harness

./: .env.example  .gitignore  LICENSE  Pipfile  Quickstart.ipynb  README.md  main.py  make_cost_curves.md  mock_preprocessed.csv  pyproject.toml
docs/: _quarto.yml  agentic_guide.html  agentic_guide.qmd  developer_guide.html  developer_guide.qmd  index.html  index.qmd  installation.html  installation.qmd  quickstart.html  quickstart.qmd  reliability_tests.html  reliability_tests.qmd  search.json  user_guide.html  user_guide.qmd
inputs/configs/: config_agentharm.yml  config_binary_harmbench.yml  config_persuade.yml
prompts/synthetic_generation_prompts/: basic_perturbation_instructions.json  perturbation_context.txt  perturbation_rubric.txt
scripts/: filter_eval_logs.py  generate_judge_heatmap.py  judge_eval.py  retry_trio.py
src/: __init__.py  harness.py  utils.py
src/agent_helpers/: __init__.py  debug_utils.py  ingestion.py  instruction_verifier.py  llm_client.py  multi_edit_perturber.py  outputs.py  planner.py  preprocessors.py  schemas.py  single_edit.py  text_utils.py
src/configs/: default_config.yml
src/core/: __init__.py  constants.py  llmclient.py  resolve_admin_config.py  resolve_synthetic_data_configs.py  resolve_templates.py  utils.py
src/reliability_tests/: __init__.py  eval_metrics.py  evaluator.py
src/review_server/: __init__.py  adapter.py  index.html  runner.py  server.py
src/schemas/: __init__.py  agentic_configs.py  configs.py  review_server.py  synthetic_data_pipeline.py
tests/: conftest.py  test_harness.py
(+44 files in other folders)
